# mcp

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  genpdfdoc.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pypi-publish.yml
docs/: conf.py  index.rst  prompts.rst  resource_templates.rst  resources.rst  usage.rst
docs/_ext/: hello.py
docs/example_everything/: index.rst  prompts.rst  resource_templates.rst  resources.rst  tools.rst
docs/example_pymcp/: index.rst  prompts.rst  resource_templates.rst  resources.rst  tools.rst
docs/mcp/: index.rst  resources.rst  tools.rst
src/sphinx_mcp/: __init__.py  client.py  common.py  hello.py  main.py  mcpdocs.py  utils.py
tests/: test_main.py
